# fridge-chef

./: .env.example  .env.local.example  .env.prod.example  .gitignore  .mcp.json  CONTRIBUTING.md  Day1_fridge.md  Day2_fridge.md  Day3_fridge.md  Day4_fridge.md  HANDOFF.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  process(fridge).md  pytest.ini  render.yaml  research(fridge).md  workList(fridge).md  workList2(fridge).md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  favorites.py  fridge.py  ingredients.py  recipes.py  recommend.py
backend/app/core/: __init__.py  allergy_map.py  auth.py  config.py  db.py  rate_limit.py  security.py  synonym_map.py
backend/app/models/: __init__.py  fridge.py  orm.py  recipe.py  recipe_repository.py  user.py
backend/app/schemas/: __init__.py  auth.py  favorites.py  fridge.py  recommend.py
backend/app/services/: __init__.py  auth_service.py  context_expander.py  email_service.py  embedding_service.py  favorites_service.py  fridge_service.py  gemini_client.py  gemini_intent.py  model_a.py  model_b.py  recommend_service.py  semantic_embedding_service.py
backend/data/: recipe_descriptions.json  recipe_embeddings.npz
backend/data/recipe_descriptions/: batch_01.json  batch_02.json  batch_03.json  batch_04.json  batch_p01.json  batch_p02.json  batch_p03.json  batch_p04.json  batch_p05.json  batch_p06.json  batch_p07.json  batch_p08.json  batch_p09.json  batch_p10.json
backend/scripts/: demo_nl_before_after.py  evaluate_recommend.py  evaluate_semantic_nl.py  experiment_emotional_nl.py  experiment_intent_parsing.py  experiment_nl_design.py  experiment_recommend.py  full_eval_1667.py  generate_descriptions_gemini.py  import_real_recipes.py  precompute_embeddings.py  rebuild_corpus_cache.py  upload_to_supabase.py
backend/tests/: README.md  conftest.py  test_health.py  test_recommend.py
backend/tests/api/: __init__.py  test_auth_api.py  test_auth_me_api.py  test_favorites_api.py  test_fridge_api.py  test_ingredients_api.py  test_recipes_api.py  test_recommend_api.py  test_verify_email_api.py
backend/tests/e2e/: __init__.py  test_user_journey.py
backend/tests/fixtures/: allergy_golden_set.json  eval_tfidf_scenarios.json  nl_relabel_set.json  recommend_golden_set.json
backend/tests/unit/: __init__.py  (+25 more)
(+70 files in other folders)
