[project]
name = "fridge-chef-backend"
version = "1.0.0"
description = "FridgeChef FastAPI backend — AI recipe recommendation (Model A 냉털 + Model B 부족재료 + Gemini)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi[all]>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "bcrypt>=4.2",
    "pyjwt>=2.10.1",
    "google-generativeai>=0.7",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.18",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008 — FastAPI Depends(...) in argument defaults 는 공식 표준 패턴.
# E501 — line-length 는 위 [tool.ruff] line-length=100 으로 관리.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
